--- a/project3.html
+++ b/project3.html
@@ -66,7 +66,7 @@
                         <p class="text op" id="1">
                             The project is an investigation of voids - i.e., forgotten, wasted or dead spaces - within the industrial estate of Kordin. 
 
-                            <br><br>This first part of the thesis project was developed by myself and my colleague Maria Bilocca, where our project stemmed from an exploration into the current toxic cycle of production, consumption and waste. 
+                            <br><br>This first part of the thesis project was developed by myself and my colleague, where our project stemmed from an exploration into the current toxic cycle of production, consumption and waste. 
                             The main thesis question was raised: how can territories of void be perceived as territories of potential? By seeking to understand values and typologies of voids, these can be exploited as a waster resource. Thus, a new loop can be created from the current linear process of the island, towards a self-sufficient and resilient system.
                             
                             <br><br>The intent is to activate the voids and trigger a self-sufficient system for rethinking waste. Voids are considered as territories of potential, where they work as a system of activators towards a more resilient community. 
