--- a/project1.html
+++ b/project1.html
@@ -64,7 +64,8 @@
                             <b>Project&nbsp;&nbsp;:</b>&nbsp;&nbsp;ReUse Italy competition entry<br>
                         </p>
                         <p class="text op" id="1">
-                            Torre Rinalda, along with other neighbouring towers along the Italian coastline, was part of a coastal protection system. Its social and historic value lay in the peace of mind it offered to the community. This value of protection can be further enhanced in the present and future times. However, the meaning of protection has evolved. The threat of raids and sea invaders has shifted to a wide-ranged social, economical and political threats. These include emergency situations like food shortage, natural disasters, electricity shortage, homelessness and pandemics. 
+                            This project is a conceptual entry between myself and my colleague Maria, where we explored the potential reuse of the ruins of a historic tower.
+                             Torre Rinalda, along with other neighbouring towers along the Italian coastline, was part of a coastal protection system. Its social and historic value lay in the peace of mind it offered to the community. This value of protection can be further enhanced in the present and future times. However, the meaning of protection has evolved. The threat of raids and sea invaders has shifted to a wide-ranged social, economical and political threats. These include emergency situations like food shortage, natural disasters, electricity shortage, homelessness and pandemics. 
                             
 
                         </p>
