--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       </div>
       <footer>
         <p class="gray">
-          © 2023
+          all images © Mireille Tabone 2023
         </p>
         
       </footer>
