--- a/project1.html
+++ b/project1.html
@@ -65,15 +65,21 @@
                         </p>
                         <p class="text op" id="1">
                             This project is a conceptual entry between myself and my colleague Maria, where we explored the potential reuse of the ruins of a historic tower.
-                             Torre Rinalda, along with other neighbouring towers along the Italian coastline, was part of a coastal protection system. Its social and historic value lay in the peace of mind it offered to the community. This value of protection can be further enhanced in the present and future times. However, the meaning of protection has evolved. The threat of raids and sea invaders has shifted to a wide-ranged social, economical and political threats. These include emergency situations like food shortage, natural disasters, electricity shortage, homelessness and pandemics. 
+                             Torre Rinalda, along with other neighbouring towers along the Italian coastline, was part of a coastal protection system. Its social and historic value lay in the peace of mind it offered to the community. This value of protection can be further enhanced in the present and future times. However, the meaning of protection has evolved. 
+                             The threat of raids and sea invaders has shifted to a wide-ranged social, economical and political threats. 
+                             These include emergency situations like food shortage, natural disasters, electricity shortage, homelessness and pandemics. 
                             
 
                         </p>
                         <p class="text op hide" id="3">
-                            This project therefore looks at the uncertainty in our future and how the Tower can act once again within a system to assist the community in a crisis. The first step is establishing green public pathways and areas around the tower with plants that thrive in marine environments.  With the skills of the locals, a steel structure is erected to support a public pathway at different levels, connected through a lift and several staircases. With planters throughout, the tower is transformed into a public garden.
+                            This project therefore looks at the uncertainty in our future and how the Tower can act once again within a system to assist the community in a crisis. The first step is establishing green public pathways and areas around the tower with plants that thrive in marine environments.  
+                            With the skills of the locals, a steel structure is erected to support a public pathway at different levels, connected through a lift and several staircases. 
+                            With planters throughout, the tower is transformed into a public garden.
                         </p>
                         <p class="text op hide" id="5">
-                            The next step is the construction of water, food, energy and communication capsules. These are used as workshops/study areas for students/professionals to develop innovative and self-sufficient ways to preserve and produce water, food, energy and communications, keeping in mind harsh conditions. The structure must be adaptable to allow for alternative technologies, for instance, fog harvesting, artificial photosynthesis and seawater greenhouses. The structure is allowed to grow and evolve, according to the needs of the current times, testing out and establishing new technologies for the survival of humanity.
+                            The next step is the construction of water, food, energy and communication capsules. 
+                            These are used as workshops/study areas for students/professionals to develop innovative and self-sufficient ways to preserve and produce water, food, energy and communications, keeping in mind harsh conditions. 
+                            The structure must be adaptable to allow for alternative technologies, for instance, fog harvesting, artificial photosynthesis and seawater greenhouses. The structure is allowed to grow and evolve, according to the needs of the current times, testing out and establishing new technologies for the survival of humanity.
 
                         </p>
                         <p class="text op hide" id="9">
