--- a/project13.html
+++ b/project13.html
@@ -74,9 +74,10 @@
                             flexibility is present within the intervention itself. Worktops and presentation boards are designed to shift and are not fixed. 
                             <br><br><b>Open space:</b> The aim was to maintain the open space provided, as it is beneficial for lectures and it allows a degree of flexibility. 
                             <br><br><b>Materials and tools:</b> What the project seeks to achieve is a sense of order and ability to have a proper working environment, which could be equipped with tools, stationery and materials. 
-                            Storage spaces are flexible and can be carried around the studio where needed. the seating spaces also offer storage spaces, as well as the flexible material library. Our tendency to work with large papers and drawings led to the need of wide open shelving. 
+                            Storage spaces are flexible and can be carried around the studio where needed. the seating spaces also offer storage spaces, as well as the flexible material library. 
+                            Our tendency to work with large papers and drawings led to the need of wide open shelving. 
                             A designated cutting corner also helps the students to have a working space for model-making.
-                            <b>Secluded spaces:</b> It also satisfies the need for more private nooks and spaces where the student can work both within reach of the studio but secluded to a certain point. 
+                            <br><b>Secluded spaces:</b> It also satisfies the need for more private nooks and spaces where the student can work both within reach of the studio but secluded to a certain point. 
                         These spaces are reachable through a lightweight staircase. 
                         <br><br><b>Presentation of work:</b> Moreover, the workstops are designed to be able to shift into presentation boards on both sides of the intervention.  
                         This also helps the students to practice presenting their work more regularly, which ultimately enhances design skills.
