--- a/project2.html
+++ b/project2.html
@@ -64,17 +64,21 @@
                             <b>Project&nbsp;&nbsp;:</b>&nbsp;&nbsp;ReUse Italy competition entry
                         </p>
                         <p class="text op" id="2">
-                        The site is a witness to the beauty of nature - both in its conception and its current state. The Nymphaeum was primarily intended to celebrate the power of water, and water itself was part of its making into ruin. Water as part of the natural realm is an integral part to the spirit of the site.
+                        The site is a witness to the beauty of nature - both in its conception and its current state. 
+                        The Nymphaeum was primarily intended to celebrate the power of water, and water itself was part of its making into ruin. Water as part of the natural realm is an integral part to the spirit of the site.
                         </p>
                         
                         <p>
                         <p class="text op hide" id="6">
-                        Since it was hypothetically never completed, the Nymphaeum recalls its incomplete state, which is now manifested in a different manner. In the course of history, it has given the user the power  to be creative and create their own narrative.
+                        Since it was hypothetically never completed, the Nymphaeum recalls its incomplete state, which is now manifested in a different manner.
+                         In the course of history, it has given the user the power  to be creative and create their own narrative.
                         </p>
                        
                         <p>
                         <p class="text op hide" id="8">
-                        The intervention emphasises these notions by embracing rainwater, thus creating a dialogue between the past and the present. The theatre is located within the Nymphaeum, allowing all users to be immersed within its immense spatial qualities. The design is ingluenced by the thatched roofs of the surrounding buildings, and the new fabric is distinguished from the old. Rainwater is directed through the site towards the stream and thus creating a multi-sensory experience when it rains.
+                        The intervention emphasises these notions by embracing rainwater, thus creating a dialogue between the past and the present. 
+                        The theatre is located within the Nymphaeum, allowing all users to be immersed within its immense spatial qualities. The design is ingluenced by the thatched roofs of the surrounding buildings, and the new fabric is distinguished from the old. 
+                        Rainwater is directed through the site towards the stream and thus creating a multi-sensory experience when it rains.
                         </p>
 
 
