--- a/project3.html
+++ b/project3.html
@@ -66,7 +66,7 @@
                         <p class="text op" id="1">
                             The project is an investigation of voids - i.e., forgotten, wasted or dead spaces - within the industrial estate of Kordin. 
 
-                            <br><br>This first part of the thesis project was developed by myself and my colleague, where our project stemmed from an exploration into the current toxic cycle of production, consumption and waste. 
+                            <br><br>This first part of the thesis project was developed by myself and my colleague Maria, where our project stemmed from an exploration into the current toxic cycle of production, consumption and waste. 
                             The main thesis question was raised: how can territories of void be perceived as territories of potential? By seeking to understand values and typologies of voids, these can be exploited as a waster resource. Thus, a new loop can be created from the current linear process of the island, towards a self-sufficient and resilient system.
                             
                             <br><br>The intent is to activate the voids and trigger a self-sufficient system for rethinking waste. Voids are considered as territories of potential, where they work as a system of activators towards a more resilient community. 
@@ -98,8 +98,9 @@
 
                         <p class="text op hide" id="7">
                             The vision for Kordin therefore involves looking at voids as a system of activators paving the way for self-sufficient and resilient systems exploiting current industries and uses in the industrial city.
-                            <br><br>This is done in phases: exploiting green islands and transforming them into toxin-absorbing greenery; connection of green islands by green corridors; reestablishing disused rainwater reservoirs; introducing an elevated conveyor belt system for an alternate transportation system which reducing vehicular traffic and thus allowing a pedestrian flow and further connections. 
-                            <br><br>Briefly, the project evolved into focusing on two main industries identified within Kordin; that of food (by Maria Bilocca) and the material industries (by Mireille Tabone). Hence the masterplan highlights the general approach of potential systems for both industries inspired by the notion of waste being potential, waste as a resource. 
+                            <br><br>This is done in phases: exploiting green islands and transforming them into toxin-absorbing greenery; connection of green islands by green corridors; reestablishing disused rainwater reservoirs; 
+                            introducing an elevated conveyor belt system for an alternate transportation system which reducing vehicular traffic and thus allowing a pedestrian flow and further connections. 
+                            <br><br>Briefly, the project evolved into focusing on two main industries identified within Kordin; that of food (by Maria) and the material industries (by myself). Hence the masterplan highlights the general approach of potential systems for both industries inspired by the notion of waste being potential, waste as a resource. 
                             Every intervention to sustain such a system is linked to a void, which are in turn seen as territories of waste or potential.
                               
                         </p>
@@ -190,7 +191,7 @@
                 </p>
             </footer>
             <div id="floatingbutton"><a href="aboutme.html">about me &#8203; &#8203; &#8203;</a><a
-                    href="index.html">gallery</a></div>
+                    href="index.html">projexts</a></div>
         </div>
     </div>
 </body>
