--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
+
+    <meta name="description" content="A scrap book of sorts. Architectural Portfolio.">
+
 </head>
 
 <body>
@@ -43,7 +46,7 @@
                 </div>
                 <div class="col-md-8">
                   <div class="toright links">
-                    <a class="disable" href="aboutme.html"> about&nbsp;me &#8203;</a>
+                    <a class="disable" href="aboutme.html"> about&nbsp;me &#8203&bull;</a>
                   </div>
                 </div>
               </div>
