--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
 
-    <meta name="description" content="A scrap book of sorts. Architectural Portfolio.">
-
+    <meta name="description" content="A scrap book of sorts. Architectural Portfolio - Mireille Tabone.">
+    <meta name="keywords" content="Architecture, architectural portfolio, portfolio, Mireille Tabone">
 </head>
 
 <body>
