--- a/index.html
+++ b/index.html
@@ -121,6 +121,13 @@
               </a>
             </div>
 
+            <div class="col-md-4 tile">
+              <a class="heff" href="project14.html"><img class="imgtile" src="projects_images/Project14/thumbnail.png">
+                <p class="centered">Conservation works at Belvedere Palace, Weimar.</p>
+              </a>
+            </div>
+
+
           </div>
         </article>
       </div>
