--- a/project8.html
+++ b/project8.html
@@ -81,7 +81,7 @@
                 </p>
             </footer>
             <div id="floatingbutton"><a href="aboutme.html">about me &#8203; &#8203; &#8203;</a><a
-                    href="index.html">gallery</a></div>
+                    href="index.html">projects</a></div>
         </div>
     </div>
 </body>
