--- a/aboutme.html
+++ b/aboutme.html
@@ -21,6 +21,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+        
 </head>
 
 <body>
@@ -59,7 +60,7 @@
                     <div class="col-md-3">
                         <div id="aboutL">
                             I'm an architect from Malta, holding a Master's in Architecture and Conservation Studies. Mainly, my interest lies in the conservation side of architecture, especially the dynamic between new and old, history, and all things ancient. I'm driven to appreciate and understand our heritage, as seen in my dissertation and thesis projects exploring the narrative potential of incomplete architecture, particularly ruins.
-                            <br><br>I've actively participated in Underground4value courses dealing with management and valorisation of underground heritage. Voluntary experiences, particularly in the conservation of UNESCO world heritage sites, have allowed me to learn from like-minded professionals, gaining insights into different cultures while appreciating the social, historical, and architectural values of these sites.
+                            <br><br>I've actively participated in courses dealing with management and valorisation of underground heritage. Voluntary experiences, particularly in the conservation of UNESCO world heritage sites, have allowed me to learn from like-minded professionals, gaining insights into different cultures while appreciating the social, historical, and architectural values of these sites.
                             <br><br>Beyond architecture, my curiosity leads me to explore diverse interests, including illustrations, music, and architectural theories. I'm always on the lookout for opportunities to learn and grow.
 
                         </div>
