--- a/project6.html
+++ b/project6.html
@@ -64,26 +64,33 @@
                             <b>Project&nbsp;&nbsp;:</b>&nbsp;&nbsp;Masters of Architecture (Architecture and Conservation Studies) Dissertation
                         </p>
                         <p class="text op" id="3">
-                            Recognizing the powerful ability of the ruin to stimulate our imagination, this study questions what the trigger for this might potentially be. 
+                            <a href="files/The (in)complete ruin - Shaping a potential narrative - Mireille Tabone.pdf" target="_blank">The (in)complete ruin: Shaping a potential narrative</a>
+                            <br><br>Recognizing the powerful ability of the ruin to stimulate our imagination, this study questions what the trigger for this might potentially be. 
                             In the literature review, the ruin is discussed as an open paradox and expands on the notion of (in)completeness as a possible instigator of narratives. 
-                            Compared to what ‘complete architecture’ evokes, the ruin is explored as a subset of ‘incomplete architecture’ in the way it influences the visual perception and imagination of the viewer. 
+                            Compared to what <q>complete architecture</q> evokes, the ruin is explored as a subset of <q>incomplete architecture</q> in the way it influences the visual perception and imagination of the viewer. 
                             This forms a framework illustrating how incompleteness potentially shapes a narrative.
                         </p>
                         <p class="text op hide" id="6">
-                            Based on the literature addressed, the study examines case studies in Gozo, chosen for the varying levels of fragmentation they exhibited: Ġgantija and Santa Verna, as contrasting prehistoric remains; 
+                            <a href="files/The (in)complete ruin - Shaping a potential narrative - Mireille Tabone.pdf" target="_blank">The (in)complete ruin: Shaping a potential narrative</a>
+
+                            <br><br>Based on the literature addressed, the study examines case studies in Gozo, chosen for the varying levels of fragmentation they exhibited: Ġgantija and Santa Verna, as contrasting prehistoric remains; 
                             Ta’ Kenuna Tower, as a contemporary intervention on a 19th-century semaphoric tower; and Ulysses Lodge in Xagħra, as a 20th-century abandoned hotel. 
                             The research compares the different biases held by the interviewees, all coming from different areas of expertise, and how they both define the ruin; and interpret and react to the case studies. 
                             For each site, a set of narratives is gathered from each interviewee.
                         </p>
                         <p class="text op hide" id="11">
-                            Results reveal how different levels of familiarity, when correlated with an incremental level of fragmentation and age of case studies, produce varying natures of narratives. 
-                            It was noted how the ‘individual’ narrative is partially a product of our relationship with the ‘true’ narrative. 
+                            <a href="files/The (in)complete ruin - Shaping a potential narrative - Mireille Tabone.pdf" target="_blank">The (in)complete ruin: Shaping a potential narrative</a>
+
+                            <br><br>Results reveal how different levels of familiarity, when correlated with an incremental level of fragmentation and age of case studies, produce varying natures of narratives. 
+                            It was noted how the <q>individual</q> narrative is partially a product of our relationship with the <q>true</q> narrative. 
                             The results are analysed in relation to incompleteness: through a discussion of the background knowledge and memory of the interviewee and in the level and nature of fragmentation and the extent of intervention at the site in question. 
                             These elements represent the roots of the potential narratives and resulted as being interdependent in determining how powerful the rupture could be.
                         </p>
                         <p class="text op hide" id="14">
-                            Ultimately, the recognition of incompleteness in a ruin, especially where fragmentation is high, acts as a rupture for the viewer. This adds value to a site seen as a narrative device. 
-                            This study is an inquiry about the meaning and perception of incompleteness of ‘architecture’ in our current environment, highlighting its relevance in architectural discourse.
+                            <a href="files/The (in)complete ruin - Shaping a potential narrative - Mireille Tabone.pdf" target="_blank">The (in)complete ruin: Shaping a potential narrative</a>
+
+                            <br><br>Ultimately, the recognition of incompleteness in a ruin, especially where fragmentation is high, acts as a rupture for the viewer. This adds value to a site seen as a narrative device. 
+                            This study is an inquiry about the meaning and perception of incompleteness of <q>architecture</q> in our current environment, highlighting its relevance in architectural discourse.
                         </p>
                     </div>
                 </div>
