--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 
     <meta name="description" content="A scrap book of sorts. Architectural Portfolio - Mireille Tabone.">
     <meta name="keywords" content="Architecture, architectural portfolio, portfolio, Mireille Tabone">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CXGPLL1HFV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-CXGPLL1HFV');
+    </script>
 </head>
 
 <body>
