--- a/project12.html
+++ b/project12.html
@@ -45,7 +45,7 @@
                                     </div>
                                     <div id="details">
                                         Junior Architect <br>
-                                        mireilletabone97@gmail.com <br>
+                                        mireilletabone@outlook.com <br>
                                         Malta
                                     </div>
                                 </div>
